--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,17 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #9f2bb3;
+    --secondary-color: #eec1ea;
+    --tertiary-color: #fafafa;
+  
+    --dark-color: #8a2be2;
+    --light-color: #fffaf0;
+
+    --border-textarea-color : #ccc; 
+  }
+
 body {
     font-family: "Poppins", sans-serif;
     margin: 0;
@@ -12,17 +23,18 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #eec1ea;
+    background: var(--secondary-color);
+    color: var(--dark-color);
     
 }
 
 body p {
-    color: darkmagenta;
+    color: var(--primary-color);
 }
 
 section.container {
     width: 52vw;
-    max-width: 800px;
+    height: 100vh;
 }
 
 
@@ -38,14 +50,16 @@ nav ul#abas {
 
 nav #abas li {
     list-style: none;
+    border-top-right-radius: 12px;
+    border-top-left-radius: 12px;
 }
 
 nav ul#abas a {
     text-decoration: none;
-    border: 1px solid blueviolet;
+    border: 1px solid var(--dark-color);
     height: 25px;
-    color: blueviolet;
-    background-color: floralwhite;
+    color: var(--dark-color);
+    background-color: var(--light-color);
     font-size: 16px;
     cursor: pointer;
     outline: none;
@@ -58,7 +72,7 @@ nav ul#abas a {
 
 nav ul#abas a.selected, nav ul#abas a:hover{
     margin-top: 0px;
-    background-color: #9f2bb3;
+    background-color: var(--primary-color);
     color: white;
     height: 35px;
     padding-top: 4px;
@@ -71,69 +85,72 @@ nav ul#abas a.selected, nav ul#abas a:hover{
 }
 
 .ativo{
-    display: block !important;
+    display: block ;
 }
 
 
 h1.titulo {
-    color: darkmagenta;
+    color: var(--primary-color);
     margin-bottom: 30px;
     text-align: center;
 }
 
 
-#text-box {
+.text-box {
     padding-top: 27px;
     padding: 10px;
-    background-color: whitesmoke;
+    background-color: var(--tertiary-color);
     border-radius: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#text-box::after {
-    content: '';
+.wrapperTextarea {
+    width: 100%;
 }
 
 textarea, #textModified {
-    width: 50vw;
-    height: 20vh;
+    width: 100%;
+    height: 150px;
     outline: none;
-    border: 2px solid #ccc;
+    border: 2px solid var(--border-textarea-color);
     border-radius: 4px;
     font-size: 16px;
     resize: none;
-    color: blueviolet;
+    color: var(--dark-color);
 }
 
-#textModified {
-    background-color: white;
+.converte {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 button {
-    border: 1px solid blueviolet;
+    border: 1px solid var(--primary-color);
     height: 25px;
     border-radius: 4px;
-    color: blueviolet;
-    background-color: floralwhite;
+    color: var(--primary-color);
+    background-color: var(--tertiary-color);
     font-size: 16px;
     cursor: pointer;
     outline: none;
+    margin: 4px;
 }
 
 button:hover, .activeColorful {
-    background-color: #9f2bb3;
+    background-color: var(--primary-color);
     color: white;
 }
 
 
 #results-wrapper {
-    width: 52vw;
+    width: 100%;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .results {
@@ -161,3 +178,108 @@ button:hover, .activeColorful {
 .negrito {
     font-weight: 700;
 }
+
+@media only screen and (max-width: 639px) {
+    body p {
+        font-size: 14px;
+    }
+
+    .results p {
+        font-size: 14px;
+    }
+    
+
+    nav ul#abas a {
+        height: 20px;
+        font-size: 12px;
+        padding: 0 4px;
+        margin-top: 5px;
+        display: flex;
+    }
+
+    nav ul#abas a.selected, nav ul#abas a:hover {
+        height: 25px;
+        padding-top: 4px;
+    }
+    .contadorText {
+        font-weight: 700;
+    }
+}
+@media only screen and (min-width: 640px) {
+ 
+
+
+    /* contador */
+    #results-wrapper {
+        padding-right: 20px;
+    }
+
+    .results {
+        margin-right: 20px;
+        width: 42%;
+    }
+
+    .results p b {
+        left: 105%;
+    }
+    .contadorText {
+        font-weight: 700;
+    }
+    
+    
+}
+
+@media only screen and (max-width: 799px) {
+
+    /* contador */
+    .results {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin-right: 0px;
+    }
+   
+    .results p {
+
+        text-align: center;
+    }
+
+  }
+
+
+  @media only screen and (min-width: 800px) {
+    
+    /* contador */
+    #results-wrapper {
+        width: 80%;
+    }
+
+    .results {
+ 
+        width: 41%;
+    }
+   
+}
+
+
+@media only screen and (min-width: 1200px) {
+
+    /* contador */
+    .results p {
+        text-align: end;
+    }
+    #results-wrapper {
+        width: 100%;
+    }
+    .results {
+    
+        width: 21% ;
+    }
+    
+}
+
+
+
+
