--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ nav ul#abas a.selected, nav ul#abas a:hover{
     width: 100%;
 }
 
-textarea, #textModified {
+textarea {
     width: 100%;
     height: 150px;
     outline: none;
@@ -131,6 +131,7 @@ textarea, #textModified {
     font-size: 16px;
     resize: none;
     color: var(--dark-color);
+    background-color: white;
 }
 
 .converte {
